<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MachineConditions" Id="{87561a89-f064-444b-8d5e-bfafedbc17d9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MachineConditions :
(
	unIsReadyToStart := 0,
	unIsHeating := 1,
	unIsSmelting := 2,
	unIsCooling := 3
)UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>